testsuite/tests/properties/invalid_bind/bad_arity.lkt
import common

class BazNode: FooNode {
    fun conv_prop(@ignored b: Bool): Entity[FooNode] = self
}
